--- a/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
+++ b/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
@@ -19,6 +19,15 @@
                 </div>
               </div>
             </div> <!-- Title -->
+
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Breve Descrizione:</label>
+              <div class="col-sm-10">
+                <textarea rows="2" type="text" formControlName="short_description" class="form-control"
+                          [ngClass]="{ 'is-invalid': submitted && f.short_description.errors }"></textarea>
+              </div>
+            </div> <!--Short Description -->
+
             <div class="form-group row">
               <label class="col-lg-3 col-sm-3 col-form-label">Descrizione:</label>
               <div class="col-lg-9 col-sm-9">
@@ -297,6 +306,12 @@
       </div>
     </form>
   </div>
+
+  <div *ngIf="submitted && f.short_description.status === 'INVALID'" class="alert alert-danger col-md-12">
+    <div >Descrizione breve obbligatoria, deve essere tra 1 e 255 caratteri.
+    </div>
+  </div>
+
   <div *ngIf="submitted && f.description.status === 'INVALID'" class="alert alert-danger col-md-12">
     <div >Descrizione obbligatoria, deve essere tra 1 e 55000 caratteri. Le immagini contengono molti caratteri.
     </div>
