--- a/src/app/features/reserved-area/broker/package-list/package-list.component.html
+++ b/src/app/features/reserved-area/broker/package-list/package-list.component.html
@@ -7,10 +7,10 @@
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
       <td mat-cell *matCellDef="let coupon">
-        <span *ngIf="coupon.description.length > 40" style="font-size: 17px;">{{coupon.title.substring(0,40)}}...</span>
-        <span *ngIf="coupon.description.length <= 40" class="card-text truncate " style="font-size: 17px;">{{coupon.title}}</span> <br/>
-        <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description.substring(0,100)+ '...')"></i>
-        <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description)"></i>
+        <span *ngIf="coupon.title.length > 40" style="font-size: 17px;">{{coupon.title.substring(0,40)}}...</span>
+        <span *ngIf="coupon.title.length <= 40" class="card-text truncate " style="font-size: 17px;">{{coupon.title}}</span> <br/>
+        <i *ngIf="coupon.short_description.length > 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.short_description.substring(0,100)+ '...')"></i>
+        <i *ngIf="coupon.short_description.length <= 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.short_description)"></i>
 
       </td>
     </ng-container>
