--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -9,7 +9,7 @@
         <div class="p-4">
           <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()">
             <div class="form-group row">
-              <label  class="col-lg-3 col-sm-3 col-form-label">Titolo</label>
+              <label class="col-lg-3 col-sm-3 col-form-label">Titolo</label>
               <div class="col-lg-9 col-sm-9">
 
                 <textarea rows="2" type="text" formControlName="title" class="form-control"
@@ -19,14 +19,26 @@
                 </div>
               </div>
             </div> <!-- Title -->
+
+            <div class="form-group row">
+              <label class="col-lg-3 col-sm-3 col-form-label">Descrizione Breve</label>
+              <div class="col-lg-9 col-sm-9">
+                <textarea rows="2" type="text" formControlName="short_description" class="form-control"
+                          [ngClass]="{ 'is-invalid': submitted && f.short_description.errors }"></textarea>
+              </div>
+            </div> <!--Short Description -->
+
             <div class="form-group row">
               <label class="col-lg-3 col-sm-3 col-form-label">Descrizione</label>
               <div class="col-lg-9 col-sm-9">
-                  <div [ngClass]="{ 'is-invalid': submitted && f.description.errors }">
-                    <quill-editor [modules]= "this.toolbarOptions"  format="html" formControlName="description" [styles]="{height: '200px'}" (onFocus)="focus($event)" (onEditorChanged)="changedEditor($event)" (onBlur)="blur($event)" (onEditorCreated)="created($event)"></quill-editor>
-                  </div>
-<!--                <textarea rows="7" type="text" formControlName="description" class="form-control"-->
-<!--                          [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>-->
+                <div [ngClass]="{ 'is-invalid': submitted && f.description.errors }">
+                  <quill-editor [modules]="this.toolbarOptions" format="html" formControlName="description"
+                                [styles]="{height: '200px'}" (onFocus)="focus($event)"
+                                (onEditorChanged)="changedEditor($event)" (onBlur)="blur($event)"
+                                (onEditorCreated)="created($event)"></quill-editor>
+                </div>
+                <!--                <textarea rows="7" type="text" formControlName="description" class="form-control"-->
+                <!--                          [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>-->
               </div>
             </div> <!-- Description -->
 
@@ -34,15 +46,16 @@
               <label class="col-lg-3 col-sm-3 col-form-label">Immagine</label>
               <div class="col-lg-9 col-sm-9">
 
-                <input accept="image/*" type="file" class="col-10 col-lg-10 col-md-10 col-sm-8 p-0 btn-sm" formControlName="image"  id="files" ng2FileSelect [uploader]="uploader"
+                <input accept="image/*" type="file" class="col-10 col-lg-10 col-md-10 col-sm-8 p-0 btn-sm"
+                       formControlName="image" id="files" ng2FileSelect [uploader]="uploader"
                        [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
-<!--                style="display:none;"-->
-<!--                <label for="files" style="margin-top: 10px" >-->
-<!--                  <span class="span-style">-->
-<!--                    Sfoglia-->
-<!--                  </span>-->
-<!--                  <span *ngIf="uploader.queue[0] !== undefined" style="margin-left: 20px">{{uploader.queue[0]._file.name}}</span>-->
-<!--                </label>-->
+                <!--                style="display:none;"-->
+                <!--                <label for="files" style="margin-top: 10px" >-->
+                <!--                  <span class="span-style">-->
+                <!--                    Sfoglia-->
+                <!--                  </span>-->
+                <!--                  <span *ngIf="uploader.queue[0] !== undefined" style="margin-left: 20px">{{uploader.queue[0]._file.name}}</span>-->
+                <!--                </label>-->
 
                 <div *ngIf="submitted && f.image.errors" class="invalid-feedback">
                   <!--<div *ngIf="f.image.errors">Image is required</div>-->
@@ -54,14 +67,14 @@
               <label class="col-12 col-3 col-lg-3 col-sm-3 col-form-label">Prezzo</label>
               <div class="col-8 col-5 col-lg-7 col-sm-7">
                 <input type="number" formControlName="price" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.price.errors }" min="1" />
+                       [ngClass]="{ 'is-invalid': submitted && f.price.errors }" min="1"/>
                 <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
                   <div *ngIf="f.price.errors">Inserire prezzo, minimo 1.</div>
                 </div>
               </div>
               <div class="col-4 col-sm-2 col-lg-2 my-auto">
                 <div class="custom-control custom-checkbox">
-                  <input  type="checkbox" class="custom-control-input" id="freeCheck"
+                  <input type="checkbox" class="custom-control-input" id="freeCheck"
                          (change)="toggleCheckbox($event)" data-md-icheck>
                   <label class="custom-control-label" for="freeCheck">Gratis</label>
                 </div>
@@ -70,7 +83,8 @@
 
             <div class="form-group row">
               <label class="col-12 col-lg-3 col-sm-3 col-form-label">Visibile da
-                <span class="fas fa-info-circle" #pop="bs-popover" [popover]="popTemplate" (mouseenter)="pop.show()" (mouseleave)="pop.hide()"></span>
+                <span class="fas fa-info-circle" #pop="bs-popover" [popover]="popTemplate" (mouseenter)="pop.show()"
+                      (mouseleave)="pop.hide()"></span>
               </label>
               <div class="col-8 col-lg-7 col-sm-7"><!--(change)="changeDelay()"-->
                 <input style="background: white" type="text" mwlFlatpickr
@@ -111,34 +125,36 @@
               </div>
             </div>-->
 
-            <div  class="form-group row">
+            <div class="form-group row">
               <label class="col-lg-3 col-sm-3 col-form-label">Seleziona categorie: </label>
               <div class="col-sm-8">
                 <ng-select formControlName="categories"
                            [items]="categories"
                            [multiple]="true"
                            [closeOnSelect]="true"
-                           [searchable]= "true"
+                           [searchable]="true"
                            bindLabel="name"
                            placeholder="Seleziona categorie"
                            [(ngModel)]="selectedCategories">
                 </ng-select>
-                <div *ngIf="submitted && f.categories.errors?.NoCategoriesSelected" class="text-danger" style="font-size: 80%;">Seleziona almeno una categoria.</div>
+                <div *ngIf="submitted && f.categories.errors?.NoCategoriesSelected" class="text-danger"
+                     style="font-size: 80%;">Seleziona almeno una categoria.
+                </div>
 
               </div>
 
             </div>
-            <div  class="form-group row">
+            <div class="form-group row">
               <label class="col-lg-3 col-sm-3 col-form-label">Privato per: </label>
               <div class="col-sm-8">
                 <ng-select formControlName="broker"
-                  [items]="brokers"
-                  [multiple]="true"
-                  [closeOnSelect]="true"
-                  [searchable]="true"
-                  bindLabel="username"
-                  placeholder="Seleziona broker"
-                  [(ngModel)]="selectedBroker">
+                           [items]="brokers"
+                           [multiple]="true"
+                           [closeOnSelect]="true"
+                           [searchable]="true"
+                           bindLabel="username"
+                           placeholder="Seleziona broker"
+                           [(ngModel)]="selectedBroker">
                 </ng-select>
               </div>
             </div>
@@ -148,7 +164,7 @@
               <label class="col-lg-3 col-sm-3 col-form-label">Valido da</label>
               <div class="col-sm-8 col-lg-8">
                 <input style="background: white" type="text" mwlFlatpickr
-                       [clickOpens]="true" [noCalendar]="false"  [convertModelValue]="true" [enableTime]="true"
+                       [clickOpens]="true" [noCalendar]="false" [convertModelValue]="true" [enableTime]="true"
                        dateFormat="Y-m-d H:i" formControlName="valid_from" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
                 <div *ngIf="submitted && f.valid_from.errors " class="invalid-feedback">
@@ -158,14 +174,14 @@
             </div> <!-- Valid From -->
             <div class="form-group row">
               <label class="col-12 col-lg-3 col-sm-3 col-form-label">Scadenza</label>
-              <div  class="col-8 col-lg-7 col-sm-7">
+              <div class="col-8 col-lg-7 col-sm-7">
                 <input type="text" mwlFlatpickr
                        [style.background]="bgColorCalendar"
                        [clickOpens]="true"
                        [noCalendar]="false"
                        [convertModelValue]="true"
                        [enableTime]="true"
-                       dateFormat="Y-m-d H:i"  formControlName="valid_until" class="form-control"
+                       dateFormat="Y-m-d H:i" formControlName="valid_until" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors?.MatchDateFromUntil }"/>
                 <div *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil" class="invalid-feedback">
                   <div *ngIf="f.valid_until.errors?.MatchDateFromUntil">Data non valida</div>
@@ -184,8 +200,9 @@
             <div class="form-group row">
               <label class="col-12 col-lg-3 col-sm-3 col-form-label">Luogo</label>
               <div class="col-8 col-lg-7 col-sm-7">
-                <input google-place type="text" formControlName="constraints" class="form-control" placeholder="Type to search.."
-                  [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"
+                <input google-place type="text" formControlName="constraints" class="form-control"
+                       placeholder="Type to search.."
+                       [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"
                        (onSelect)="setAddress($event)"/>
                 <!-- Displaying the contents of the address object received from our event emitter -->
                 <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback">
@@ -213,16 +230,17 @@
 
             <div class="form-group row">
               <label class="col-12 col-lg-3 col-sm-3 col-form-label">Acquisto max per utente</label>
-              <div  class="col-8 col-lg-7 col-sm-7">
-                <input  type="text" formControlName="purchasable" class="form-control"
-                        [ngClass]="{ 'is-invalid': submitted && f.purchasable.errors }"/>
+              <div class="col-8 col-lg-7 col-sm-7">
+                <input type="text" formControlName="purchasable" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.purchasable.errors }"/>
                 <div *ngIf="submitted && f.purchasable.errors" class="invalid-feedback">
-                  <div *ngIf="f.purchasable.errors">Questo valore deve essere inferiore o uguale alla quantità creata</div>
+                  <div *ngIf="f.purchasable.errors">Questo valore deve essere inferiore o uguale alla quantità creata
+                  </div>
                 </div>
               </div>
               <div class="col-4 col-sm-2 col-lg-2 my-auto">
                 <div class="custom-control custom-checkbox">
-                  <input  type="checkbox" class="custom-control-input" id="quantityCheck"
+                  <input type="checkbox" class="custom-control-input" id="quantityCheck"
                          (change)="toggleCheckbox($event)" data-md-icheck>
                   <label class="custom-control-label" for="quantityCheck">Senza limiti</label>
                 </div>
@@ -233,7 +251,8 @@
                  *ngIf="submitted && f.valid_from.errors?.MatchDate">Errore sulle date
             </div>
             <div class="alert alert-danger col-md-12"
-                 *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil">La data di scadenza deve essere maggiore della validità.
+                 *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil">La data di scadenza deve essere maggiore
+              della validità.
             </div>
             <div class="alert alert-danger col-md-12" *ngIf="submitted && f.image.errors?.NoPath">
               Carica immagine
@@ -246,10 +265,17 @@
               <div>Immagine obbligatoria.</div>
             </div>
 
-            <div *ngIf="submitted && f.description.status === 'INVALID'" class="alert alert-danger col-md-12">
-              <div >Descrizione obbligatoria, deve essere tra 1 e 55000 caratteri. Le immagini contengono molti caratteri. deve essere tra 1 e 55000 caratteri. Le immagini contengono molti caratteri.
+            <div *ngIf="submitted && f.short_description.status === 'INVALID'" class="alert alert-danger col-md-12">
+              <div>Descrizione breve obbligatoria, deve essere tra 1 e 255 caratteri.
               </div>
             </div>
+
+            <div *ngIf="submitted && f.description.status === 'INVALID'" class="alert alert-danger col-md-12">
+              <div>Descrizione obbligatoria, deve essere tra 1 e 55000 caratteri. Le immagini contengono molti
+                caratteri. deve essere tra 1 e 55000 caratteri. Le immagini contengono molti caratteri.
+              </div>
+            </div>
+
             <div class="form group">
               <p>
                 <button class="btn btn-block btn-success btn-create-coupon">Crea</button>
