--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -91,7 +91,7 @@
               </div>
             </div> <!-- Price -->
 
-            <div class="form-group row">
+            <div *ngIf="!fromEdit" class="form-group row">
               <label class="col-sm-2 col-form-label">Visibile da:</label>
               <div class="col-sm-8">
                 <input style="background: white" type="text" mwlFlatpickr
@@ -112,6 +112,7 @@
                 </div>
               </div>
             </div>
+
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Seleziona categorie: </label>
               <div class="col-sm-8">
