--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -62,10 +62,10 @@
 
     <div *ngIf="userType == 2" class="col my-auto" style="margin-right: -0.5em; text-align: right">
       <div *ngIf="desktopMode">
-        <a *ngIf="cart.length === 0" class="text-white">La cassa <b class="text-info">è vuota</b>! </a>
+        <a *ngIf="cart.length === 0" class="text-white">Il carrello  <b class="text-info">è vuoto.</b>! </a>
         <a *ngIf="cart.length > 0" class="text-white cursor-pointer" [routerLink]="['/cart']">
-          <span class=" d-lg-inline-block">{{cart.length === 1 ? "C'è" : 'Ci sono'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ?
-            'articolo' : 'articoli'}}</b> nella cassa</span>
+          <span class=" d-lg-inline-block ">Hai <b class="text-info">{{cart.length}} {{cart.length === 1 ?
+            'articolo' : 'articoli'}}</b> nel carrello.</span>
           <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
         </a>
       </div>
