--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -61,7 +61,7 @@
               aria-labelledby="action-button">
             <li role="menuitem"><a class="dropdown-item" (click)="onCopy(coupon)"><i
               class="far fa-copy text-primary"></i> Copia</a></li>
-            <li role="menuitem" *ngIf="getTimestamp(coupon.visible_from) < timestamp && coupon.visible_from !== null"><a class="dropdown-item" (click)="onEditDescription(coupon)"><i
+            <li role="menuitem" *ngIf="!coupon.buyed && getTimestamp(coupon.visible_from) < timestamp && coupon.visible_from !== null"><a class="dropdown-item" (click)="onEditDescription(coupon)"><i
             class="fas fa-edit text-info"></i>Modifica descrizione</a></li>
             <li role="menuitem" *ngIf="!coupon.buyed && getTimestamp(coupon.visible_from) > timestamp || coupon.visible_from===null"><a class="dropdown-item" (click)="onEdit(coupon)"><i
               class="fas fa-edit text-info"></i>
@@ -96,7 +96,7 @@
       <div class="float-left">
         <button type="button" class="btn btn-primary mr-1" (click)="onCopy(coupon)"><i class="far fa-copy"></i>
         </button>
-        <button *ngIf="getTimestamp(coupon.visible_from) < timestamp && coupon.visible_from !== null" type="button" class="btn btn-info text-white mr-1" (click)="onEditDescription(coupon)"><i class="fas fa-edit"></i>
+        <button *ngIf="!coupon.buyed && getTimestamp(coupon.visible_from) < timestamp && coupon.visible_from !== null" type="button" class="btn btn-info text-white mr-1" (click)="onEditDescription(coupon)"><i class="fas fa-edit"></i>
         </button>
         <button *ngIf="!coupon.buyed && getTimestamp(coupon.visible_from) > timestamp || coupon.visible_from===null" type="button" class="btn btn-info text-white mr-1" (click)="onEdit(coupon)"><i
           class="fas fa-edit"></i>
