--- a/src/app/features/reserved-area/personal-info/personal-info.component.html
+++ b/src/app/features/reserved-area/personal-info/personal-info.component.html
@@ -21,7 +21,7 @@
                          placeholder="Nome azienda" id="company_name" maxlength="100"
                          [ngClass]="{ 'is-invalid': submitted && f.company_name.errors }"/>
 
-                  <div *ngIf="this.submitted && f.company_name.errors" class="invalid-feedback">
+                  <div *ngIf="this.selectedUser != 2 && this.submitted && f.company_name.errors" class="invalid-feedback">
                     <div *ngIf="f.company_name.errors.required">Nome azienda obbligatoria</div>
                   </div>
                 </div>
@@ -36,7 +36,7 @@
                          placeholder="Partita Iva" id="vat_number" maxlength="11"
                          [ngClass]="{ 'is-invalid': submitted && f.vat_number.errors }" required/>
 
-                  <div *ngIf="this.submitted && f.vat_number.errors" class="invalid-feedback">
+                  <div *ngIf="this.selectedUser != 2 && this.submitted && f.vat_number.errors" class="invalid-feedback">
                     <div *ngIf="f.vat_number.errors.required">Partita Iva obbligatoria</div>
                   </div>
                 </div>
@@ -77,7 +77,7 @@
               </div>
 
             </div> <!-- First and last name -->
-            <div class="form-row">
+            <div *ngIf="this.selectedUser != 2" class="form-row">
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
                   <label for="birth_place" class="label-tiny">Luogo di Nascita</label>
@@ -88,7 +88,7 @@
                 <input type="text" formControlName="birth_place" class="form-control" placeholder="Luogo di Nascita" id="birth_place"
                        [ngClass]="{ 'is-invalid': submitted && f.birth_place.errors }"/>
 
-                <div *ngIf="submitted && f.birth_place.errors" class="invalid-feedback">
+                <div *ngIf=" this.selectedUser != 2 && submitted && f.birth_place.errors" class="invalid-feedback">
                   <div *ngIf="f.birth_place.errors.required">Luogo di Nascita obbligatorio</div>
                   <div *ngIf="f.birth_place.errors.maxlength">Il luogo di nascita non deve superare 50 caratteri</div>
                 </div>
@@ -103,7 +103,7 @@
                 <input type="date" formControlName="birth_date" class="form-control" placeholder="Data di Nascita" id="birth_date"
                        [ngClass]="{ 'is-invalid': submitted && f.birth_date.errors }"/>
 
-                <div *ngIf="submitted && f.birth_date.errors" class="invalid-feedback">
+                <div *ngIf="this.selectedUser != 2 &&  submitted && f.birth_date.errors" class="invalid-feedback">
                   <div *ngIf="f.birth_date.errors.required">Data di Nascita obbligatorio</div>
                 </div>
               </div>
@@ -126,7 +126,7 @@
                 </div>
 
               </div> <!-- Fiscal code -->
-              <div class="input-group mb-3 col-md-6">
+              <div *ngIf="this.selectedUser != 2" class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
                   <label for="paypal_email" class="label-tiny">Email PayPal</label>
                 </div>
@@ -136,13 +136,29 @@
                 <input type="text" formControlName="email_paypal" class="form-control" placeholder="Email Paypal" id="paypal_email"
                        [ngClass]="{ 'is-invalid': submitted && f.email_paypal.errors }"/>
 
-                <div *ngIf="submitted && f.email_paypal.errors" class="invalid-feedback">
+                <div *ngIf="this.selectedUser != 2 && submitted && f.email_paypal.errors" class="invalid-feedback">
                   <!--<div *ngIf="f.email_paypal.errors.required">Email is required</div>-->
                   <div *ngIf="f.email_paypal.errors">Email non valida</div>
                 </div>
               </div> <!-- Mail Paypal -->
+              <div *ngIf="this.selectedUser == 2" class="input-group mb-3 col-md-6">
+                <div class="d-block w-100">
+                  <label for="address" class="label-tiny">Email</label>
+                </div>
+                <div class="input-group-prepend">
+                  <span class="input-group-text">@</span>
+                </div>
+                <input type="email" formControlName="email" class="form-control" placeholder="Email" [email]="true"
+                       [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+
+                <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                  <div *ngIf="f.email.errors.required">È necessario inserire l'indirizzo Email</div>
+                  <div *ngIf="f.email.errors.email">Email non valida!</div>
+                </div>
+
+              </div><!-- E-mail -->
             </div> <!-- Fiscal code and Paypal mail -->
-            <div class="form-row">
+            <div *ngIf="this.selectedUser != 2" class="form-row">
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
                   <label for="address" class="label-tiny">Indirizzo</label>
@@ -153,7 +169,7 @@
                 <input type="text" formControlName="address" class="form-control" placeholder="Indirizzo" id="address"
                        [ngClass]="{ 'is-invalid': submitted && f.address.errors }"/>
 
-                <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
+                <div *ngIf="this.selectedUser != 2 && submitted && f.address.errors" class="invalid-feedback">
                   <div *ngIf="f.address.errors.required">Indirizzo obbligatorio</div>
                   <div *ngIf="f.address.errors.maxlength">L'indirizzo non deve superare i 50 caratteri</div>
                 </div>
@@ -168,13 +184,13 @@
                 <input type="text" formControlName="city" class="form-control" placeholder="Città" id="city"
                        [ngClass]="{ 'is-invalid': submitted && f.city.errors }"/>
 
-                <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
+                <div *ngIf=" this.selectedUser != 2 && submitted && f.city.errors" class="invalid-feedback">
                   <div *ngIf="f.city.errors.required">Città obbligatoria</div>
                   <div *ngIf="f.city.errors.maxlength">La Città non deve superare i 50 caratteri</div>
                 </div>
               </div>
             </div> <!-- Address and Residence City -->
-            <div class="form-row">
+            <div *ngIf="this.selectedUser != 2" class="form-row">
               <div class="input-group mb-3 col-md-6">
                 <div class="d-block w-100">
                   <label for="province" class="label-tiny">Provincia</label>
@@ -185,7 +201,7 @@
                 <input type="text" formControlName="province" class="form-control" placeholder="Provincia" id="province"
                        [ngClass]="{ 'is-invalid': submitted && f.province.errors }" maxlength="2"/>
 
-                <div *ngIf="submitted && f.province.errors" class="invalid-feedback">
+                <div *ngIf="this.selectedUser != 2 && submitted && f.province.errors" class="invalid-feedback">
                   <div *ngIf="f.province.errors.required">Provincia obbligatoria</div>
                   <div *ngIf="f.province.errors.maxlength">La provincia non deve superare i 2 caratteri</div>
                 </div>
@@ -200,7 +216,7 @@
                 <input type="text" formControlName="zip" class="form-control" placeholder="Cap" id="zip_code"
                        [ngClass]="{ 'is-invalid': submitted && f.zip.errors }" maxlength="5"/>
 
-                <div *ngIf="submitted && f.zip.errors" class="invalid-feedback">
+                <div *ngIf="this.selectedUser != 2 && submitted && f.zip.errors" class="invalid-feedback">
                   <div *ngIf="f.zip.errors.required">Cap obbligatorio</div>
                   <div *ngIf="f.zip.errors.maxlength">Il cap non deve superare i 5 caratteri</div>
                 </div>
